--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 project(c_study)
 
-add_subdirectory(grammar/base)
+add_subdirectory(01-grammar)
 
 set(CMAKE_C_STANDARD 11)
