--- a/01-grammar/CMakeLists.txt
+++ b/01-grammar/CMakeLists.txt
@@ -3,3 +3,7 @@ add_subdirectory(02-data_struct)
 add_subdirectory(03-array_function)
 add_subdirectory(04-define_library)
 add_subdirectory(05-point)
+add_subdirectory(06-point_and_string)
+add_subdirectory(07-struct_union_enum)
+add_subdirectory(08-link)
+add_subdirectory(09-file)
