--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.0)
 project(c_study)
 
 add_subdirectory(01-grammar)
+add_subdirectory(02-system)
 
 set(CMAKE_C_STANDARD 11)
